--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/linearLayoutListView"
     android:layout_height="match_parent"
+    android:background="@color/lightPink"
     android:layout_weight="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
@@ -14,8 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/divider"
-        android:dividerHeight="8dp"
+        android:dividerHeight="10dp"
         android:padding="10dp"
         />
 
 </LinearLayout>
+
