--- a/app/src/main/res/layout/activity_list_view_of_completed_task.xml
+++ b/app/src/main/res/layout/activity_list_view_of_completed_task.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/lightPink"
     tools:context="com.example.daksh.todolist.ListViewOfCompletedTask">
 
     <android.support.design.widget.AppBarLayout
@@ -15,7 +16,8 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarr"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/PopupMenuStyle">
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -25,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/divider"
-        android:dividerHeight="8dp"
+        android:dividerHeight="10dp"
         android:padding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
